# pragma-monitoring

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  compose.dev.yml  compose.prod.yml
.github/workflows/: docker-build.yml  release.yml
migrations/2023-10-05-193438_create_posts/: down.sql  up.sql
migrations/2023-10-11-230102_create_posts/: down.sql  up.sql
prometheus/: alertmanager.yml  alerts.rules.yml  prometheus.yml
prometheus/template/: alert.tmpl
scripts/: db.sh
src/: config.rs  constants.rs  error.rs  lib.rs  main.rs  models.rs  process_data.rs  schema.rs  server.rs  types.rs  utils.rs
src/monitoring/: mod.rs  on_off_deviation.rs  price_deviation.rs  publisher_balance.rs  source_deviation.rs  timeLastUpdate.rs  timeLastUpdatePairId.rs  timeLastUpdateSource.rs  time_since_last_update.rs
src/processing/: api.rs  common.rs  future.rs  mod.rs  spot.rs  vrf.rs
src/tests/: mod.rs  monitoring.rs
src/tests/common/: constants.rs  fixtures.rs  mod.rs  utils.rs
