[package]
name = "monitoring"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["v4"] }
chrono = "0.4"
bigdecimal = "0.2"
num-bigint = "0.4"
diesel = { version = "2.1.0", features = ["postgres" , "numeric"] }
dotenv = "0.15.0"