[package]
name = "monitoring"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6", features = ["macros", "multipart"] }
axum-macros = "0.3"
chrono = "0.4"
bigdecimal = "0.2"
num-bigint = "0.4"
diesel = { version = "2.1.0", features = ["postgres" , "numeric", "chrono","uuid", "serde_json"] }
diesel-async = { version = "0.4.1", features = [
    "async-connection-wrapper",
    "deadpool",
    "postgres",
    "tokio",
] }
dotenv = "0.15.0"
diesel_derives = "1.4.0"
diesel_migrations = "2"
uuid = { version = "1.4", features = ["fast-rng", "v4", "serde"] }
tokio = { version = "1", features = ["full"] }
starknet_api = "0.4.1"
starknet = "0.6.0"
deadpool = { version = "0.9.3", features = ["managed"] }
futures = "0.3.28"