[package]
name = "monitoring"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6", features = ["macros", "multipart"] }
axum-macros = "0.3"
bigdecimal = "0.4.1"
chrono = "0.4"
deadpool = { version = "0.9.3", features = ["managed"] }
diesel = { version = "2.1.0", features = [
  "postgres",
  "numeric",
  "chrono",
  "uuid",
  "serde_json",
] }
diesel-async = { version = "0.4.1", features = [
  "async-connection-wrapper",
  "deadpool",
  "postgres",
  "tokio",
] }
diesel_derives = "1.4.0"
diesel_migrations = "2"
dotenv = "0.15.0"
env_logger = "0.10.1"
futures = "0.3.28"
hyper = "0.14.27"
lazy_static = "1.4.0"
log = "0.4.20"
num-bigint = "0.4"
phf = { version = "0.11", features = ["macros"] }
prometheus = "0.13.3"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.130", features = ["derive"] }
starknet = "0.8.0"
starknet_api = "0.4.1"
strum = { version = "0.25.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
url = "2.5.0"
uuid = { version = "1.4", features = ["fast-rng", "v4", "serde"] }

[dev-dependencies]
rstest = "0.18.2"
